syntax = "proto3";

package kdo.v1.inventory;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/api/client.proto";

option go_package = "github.com/meritz-corp/cds-apis/go/kdo/v1;kdo";

// InventoryService는 재고(주식/파생) 현황 관련 서비스를 제공합니다.
service InventoryService {
  // 단일 재고 현황 조회
  rpc GetInventory(GetInventoryRequest) returns (Inventory) {
    option (google.api.http) = {
      get: "/v1/inventories/{fund=funds/*}/{symbol=symbols/*}"
    };
    option (google.api.method_signature) = "fund,symbol";
  }

  // 단일 재고 현황 스트림
  rpc StreamInventory(GetInventoryRequest) returns (stream Inventory) {
    option (google.api.http) = {
      get: "/v1/inventories/{fund=funds/*}/{symbol=symbols/*}:stream"
    };
    option (google.api.method_signature) = "fund,symbol";
  }

  // 펀드별 재고 현황 목록 조회
  rpc ListInventories(ListInventoriesRequest) returns (ListInventoriesResponse) {
    option (google.api.http) = {
      get: "/v1/inventories/{fund=funds/*}"
    };
    option (google.api.method_signature) = "fund";
  }

  // 펀드별 재고 현황 목록 스트림
  rpc StreamInventories(ListInventoriesRequest) returns (stream ListInventoriesResponse) {
    option (google.api.http) = {
      get: "/v1/inventories/{fund=funds/*}:stream"
    };
    option (google.api.method_signature) = "fund";
  }

  // 원장 재고 목록 조회
  rpc ListLedgerInventories(ListLedgerInventoriesRequest) returns (ListLedgerInventoriesResponse) {
    option (google.api.http) = {
      get: "/v1/inventories/{fund=funds/*}/ledger"
    };
    option (google.api.method_signature) = "fund";
  }

  // 원장 재고 조회 (주식/파생 통합)
  rpc GetLedgerInventory(GetLedgerInventoryRequest) returns (LedgerInventory) {
    option (google.api.http) = {
      get: "/v1/inventories/{fund=funds/*}/{symbol=symbols/*}/ledger"
    };
    option (google.api.method_signature) = "fund,symbol";
  }

  // 원장에서 재고 동기화
  rpc SyncInventoryFromLedger(SyncInventoryFromLedgerRequest) returns (SyncInventoryFromLedgerResponse) {
    option (google.api.http) = {
      post: "/v1/inventories/{fund=funds/*}:sync"
      body: "*"
    };
    option (google.api.method_signature) = "fund";
  }
}

// 재고 유형
enum InventoryType {
  INVENTORY_TYPE_UNSPECIFIED = 0;
  INVENTORY_TYPE_STOCK = 1;  // 주식
  INVENTORY_TYPE_DERIV = 2;  // 파생상품
}

// 통합 재고 정보
message Inventory {
  // 종목 코드 (심볼)
  string symbol = 1;

  // 펀드 코드
  string fund_code = 2;

  // 재고 유형
  InventoryType inventory_type = 3;

  // 재고 유형별 데이터
  oneof data {
    // 주식 재고 데이터
    StockData stock = 10;
    // 파생상품 재고 데이터
    DerivData deriv = 11;
  }
}

// 원장 재고 정보 (주식/파생 통합)
message LedgerInventory {
  // 종목 코드
  string symbol = 1;

  // 펀드 코드
  string fund_code = 2;

  // 재고 유형
  InventoryType inventory_type = 3;

  // 유형별 원장 데이터
  oneof data {
    // 주식 원장 데이터
    LedgerStockData stock = 10;
    // 파생상품 원장 데이터
    LedgerDerivData deriv = 11;
  }
}

// 주식 원장 재고 데이터
message LedgerStockData {
  // 장부수량
  int64 book_quantity = 1;
  // 장부금액
  int64 book_amount = 2;
  // 대여수량
  int64 lending_quantity = 3;
  // 대주수량
  int64 borrowing_quantity = 4;
  // 매수청구수량
  int64 purchase_claim_quantity = 5;
  // 담보제공수량
  int64 collateral_quantity = 6;
  // 차입수량
  int64 borrow_quantity = 7;
  // 차입잔고수량
  int64 borrow_balance_quantity = 8;
  // 차입장부수량
  int64 borrow_book_quantity = 9;
  // 차입장부금액
  int64 borrow_book_amount = 10;
  // 차입대여수량
  int64 borrow_lending_quantity = 11;
  // 차입담보수량
  int64 borrow_collateral_quantity = 12;
  // 신청수량
  int64 application_quantity = 13;
  // 주문가능수량
  int64 orderable_quantity = 14;
  // 전일장부수량
  int64 prev_book_quantity = 15;
  // 전일매도장부수량
  int64 prev_borrow_book_quantity = 16;
  // 결제잔고
  int64 settlement_balance = 17;
  // 결제매도잔고
  int64 settlement_borrow_balance = 18;
}

// 파생상품 원장 재고 데이터
message LedgerDerivData {
  // 펀드명
  string fund_name = 1;
  // 한글종목명
  string item_name = 2;
  // 포지션구분명
  string position_type = 3;
  // 잔고수량
  int64 balance_quantity = 4;
  // 매입단가
  double entry_price = 5;
  // 장부금액
  int64 book_amount = 6;
  // 현재가격
  double current_price = 7;
  // 평가장부금액
  int64 valuation_amount = 8;
  // 당일평가손익금액
  int64 daily_pnl = 9;
  // 정산차금
  int64 settlement_diff = 10;
  // 수수료금액
  int64 fee_amount = 11;
  // 기초자산종목코드
  string underlying_code = 12;
  // 한글종목약어명
  string item_short_name = 13;
  // 거래승수
  double multiple = 14;
  // 스프레드근월물종목코드
  string spread_near_month_code = 15;
  // 한도금액
  int64 limit_amount = 16;
  // 잔여원화금액
  int64 remaining_krw_amount = 17;
}

// 주식 재고 데이터
// 일반가용과 차입가용의 이원화 구조
message StockData {
  // 전일잔고
  int64 prev_balance = 1;

  // 담보수량
  int64 pledged = 2;

  // 가용수량 (일반가용)
  int64 sellable = 3;

  // 차입가용수량
  int64 borrow_sellable = 4;

  // 차입수량
  int64 borrow_quantity = 5;

  // 장부수량
  int64 book_quantity = 6;

  // 장부금액 (원 단위)
  string book_amount = 7;

  // 매도예약수량 (내부용)
  int64 selling = 8;

  // 차입매도예약수량 (내부용)
  int64 borrow_selling = 9;

  // 차입매도수량 (내부용)
  int64 borrow_sold = 10;
}

// 파생상품 재고 데이터
// 단일 pending_quantity로 양방향 예약 관리
message DerivData {
  // 잔고수량 (양수: Long, 음수: Short)
  int64 quantity = 1;

  // 매입단가
  string entry_price = 2;

  // 장부금액
  string book_amount = 3;

  // 거래승수
  double multiple = 4;

  // 미체결수량 (양수: 매수대기, 음수: 매도대기) (내부용)
  int64 pending_quantity = 5;
}

// ========== Request/Response Messages ==========

// GetInventory 요청
message GetInventoryRequest {
  string fund = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "kdo.cdsapis.xyz/Fund"
    }
  ];

  string symbol = 2 [
    (google.api.field_behavior) = REQUIRED
  ];
}

// ListInventories 요청
message ListInventoriesRequest {
  string fund = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "kdo.cdsapis.xyz/Fund"
    }
  ];

  // 페이지 크기 (optional)
  optional uint32 page_size = 2;

  // 페이지 토큰 (optional, for pagination)
  optional string page_token = 3;

  // 필터링 조건 (optional, AIP-160)
  //
  // Available Operators:
  // * symbol
  //   * `equal`, `contains`
  // * inventory_type
  //   * `equal` (INVENTORY_TYPE_STOCK, INVENTORY_TYPE_DERIV)
  // * stock.sellable, stock.book_quantity
  //   * `equal`, `greater_than`, `less_than`
  // * deriv.quantity
  //   * `equal`, `greater_than`, `less_than`
  //
  // Examples:
  // * filter=symbol:"005930"
  // * filter=inventory_type=INVENTORY_TYPE_STOCK
  // * filter=stock.sellable > 1000
  // * filter=deriv.quantity < 0 (Short 포지션만)
  string filter = 4 [(google.api.field_behavior) = OPTIONAL];

  // 오더링 조건 (optional, AIP-132)
  //
  // Supported Fields:
  // * "symbol", "inventory_type"
  // * "stock.sellable", "stock.book_quantity", "stock.book_amount"
  // * "deriv.quantity", "deriv.book_amount"
  //
  // Examples:
  // * order_by=stock.book_amount desc
  // * order_by=deriv.quantity asc
  string order_by = 5 [(google.api.field_behavior) = OPTIONAL];
}

// ListInventories 응답
message ListInventoriesResponse {
  // 재고 현황 목록
  repeated Inventory inventories = 1;

  // 다음 페이지 토큰
  string next_page_token = 2;
}

// GetLedgerInventory 요청
message GetLedgerInventoryRequest {
  string fund = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "kdo.cdsapis.xyz/Fund"
    }
  ];

  string symbol = 2 [
    (google.api.field_behavior) = REQUIRED
  ];
}

// SyncInventoryFromLedger 요청
message SyncInventoryFromLedgerRequest {
  string fund = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "kdo.cdsapis.xyz/Fund"
    }
  ];

  // 동기화할 종목 코드 목록 (비어있을 경우 전체 종목 동기화)
  // 예: ["005930", "000660"]
  // "*" 입력 시 전체 종목 동기화
  repeated string symbols = 2 [
    (google.api.field_behavior) = OPTIONAL
  ];
}

// ListLedgerInventories 요청
message ListLedgerInventoriesRequest {
  string fund = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "kdo.cdsapis.xyz/Fund"
    }
  ];

  // 페이지 크기 (optional)
  optional uint32 page_size = 2;

  // 페이지 토큰 (optional)
  optional string page_token = 3;

  // 필터링 조건 (optional, AIP-160)
  //
  // Available Fields:
  // * symbol - 종목 코드
  // * inventory_type - 재고 유형 (INVENTORY_TYPE_STOCK, INVENTORY_TYPE_DERIV)
  //
  // Examples:
  // * symbol:"005930"
  // * inventory_type=INVENTORY_TYPE_STOCK
  string filter = 4 [(google.api.field_behavior) = OPTIONAL];
}

// ListLedgerInventories 응답
message ListLedgerInventoriesResponse {
  // 원장 재고 목록
  repeated LedgerInventory ledger_inventories = 1;

  // 다음 페이지 토큰
  string next_page_token = 2;
}

// SyncInventoryFromLedger 응답
message SyncInventoryFromLedgerResponse {
  // 동기화된 재고 목록
  repeated Inventory inventories = 1;

  // 동기화된 종목 수
  int32 synced_count = 2;
}
